--- a/src/config/launch.debug.config
+++ b/src/config/launch.debug.config
@@ -28,16 +28,22 @@
             "outDir": null
         }
     ]
+},
+{
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Launch Chrome against localhost, with sourcemaps",
+            "type": "chrome",
+            "request": "launch",
+            "runtimeExecutable": "${workspaceRoot}/src/node_modules/electron/dist/Electron.app/Contents/MacOS/Electron",
+            "sourceMaps": false,
+            // "webRoot": "${workspaceRoot}/src/js/animation/button_effect.js",
+            "runtimeArgs": [
+                "${workspaceRoot}/src/",
+                "--enable-logging",
+                "--remote-debugging-port=9222"
+            ]
+        }
+    ]
 }
-// {
-//     "name": "Debug",
-//     "type": "chrome",
-//     "request": "launch",
-//     "runtimeExecutable": "${workspaceRoot}/src/node_modules/electron/dist/Electron.app/Contents/MacOS/Electron",
-//     "runtimeArgs": [
-//         "${workspaceRoot}",
-//         "--enable-logging",
-//         "--remote-debugging-port=9222"
-//      ],
-//      "sourceMaps": false
-// }
